homepage view and form setup

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,7 +12,8 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-           <%= link_to signin_path "Sign In" %>
+           <li><a class="navbar" href="<%= signin_path %>"/>Sign In</a></li>
+           <li><a class="navbar" href="#"/>Sign Up</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
