--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,1 +1,11 @@
-<h1>Welcome to the Amusement Park!</h1>
+<div class="container">
+  <img src="http://www.washingtonpost.com/wp-srv/special/health/why-roller-coasters-make-us-scream/images/rollercoasterBackground.jpg" width="550" height="325">
+
+  <div class="right-info">
+    <h1>Welcome to the Amusement Park!</h1>
+    <div class="center">
+      <p><a href="/signin">Sign in</a>   |   <a href="/users/new">Sign up</a></p>
+    </div>
+  </div>
+  
+</div> <!--close container -->
