time for a timeout, working out the login issues

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
     <!-- content -->
     <div class="container"  role="main">
-      
+      <%= flash[:notice] %>
       <%= yield %>
     </div>
 
