--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -4,7 +4,7 @@
   <div class="right-info">
     <h1>Welcome to the Amusement Park!</h1>
     <div class="center">
-      <p><a href="/signin">Sign in</a>   |   <a href="/users/new">Sign up</a></p>
+      <p><a href="/sign_in">Sign in</a>   |   <a href="/users/new">Sign up</a></p>
     </div>
   </div>
   
