--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,8 +12,14 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-           <li><a class="navbar" href="<%= signin_path %>"/>Sign In</a></li>
-           <li><a class="navbar" href="#"/>Sign Up</a></li>
+           <% if logged_in? %>
+            <li><%= link_to "Hello, #{current_user.name}!", user_path(current_user) %></li>
+            <li><%= link_to "Attractions", attractions_path %></li>
+            <li><%= link_to "Log Out", logout_path %></li>
+            <% else %>
+            <li><%= link_to "Sign Up", new_user_path %></li>
+            <li><%= link_to "Sign In", sign_in_path %></li>
+            <% end %>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
