--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,21 +1,40 @@
+<h1>New user</h1>
+
 <%= form_for @user do |f| %>
-  <%= f.label :name %>:
-  <%= f.text_field :name %><br />
 
-  <%= f.label "Height (in inches)" %>:
-  <%= f.text_field :height %><br />
+  <% if @user.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
-  <%= f.label 'How happy are you? (1-5 scale)' %>:
-  <%= f.text_field :happiness %><br />
+      <ul>
+      <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
 
-  <%= f.label 'How nauseous are you? (1-5 scale)' %>:
-  <%= f.text_field :nausea %><br />
 
-  <%= f.label 'How many tickets would you like to purchase for $1 each' %>:
-  <%= f.text_field :tickets %><br />
+  <%= f.label :name %>:</br>
+  <%= f.text_field :name %></br></br>
+
+  <%= f.label :password %>:</br>
+  <%= f.password_field :password %></br></br>
+
+  <%= f.label "Height (in inches)" %>:</br>
+  <%= f.text_field :height %></br></br>
+
+  <%= f.label 'How happy are you? (1-5 scale)' %>:</br>
+  <%= f.text_field :happiness %></br></br>
+
+  <%= f.label 'How nauseous are you? (1-5 scale)' %>:</br>
+  <%= f.text_field :nausea %></br></br>
+
+  <%= f.label 'How many tickets would you like to purchase for $1 each' %>:</br>
+  <%= f.text_field :tickets %></br></br>
 
   <%= f.label 'Check box if you are a theme park owner' %>:
-  <%= f.check_box :admin %><br />
+  <%= f.check_box :admin %></br></br>
 
   <%= f.submit "Create User" %>
 <% end %>
