--- a/app/views/attractions/edit.html.erb
+++ b/app/views/attractions/edit.html.erb
@@ -22,4 +22,4 @@
   <%= f.submit "Update Attraction" %>
 <% end %>
 
-<%= link_to "Show", attraction_path(@attraction) %> | <%= link_to "Back", :back %>
+<%= link_to "Show", attraction_path(@attraction) %> | <%= link_to "Back", attractions_path %>
