--- a/app/views/attractions/new.html.erb
+++ b/app/views/attractions/new.html.erb
@@ -19,5 +19,7 @@
   <%= f.label 'How many tickets does it cost?' %>:
   <%= f.text_field :tickets %><br />
 
-  <%= f.submit "Create Attraction" %>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
 <% end %>
