--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,23 +1,6 @@
-<%= form_for @user do |f| %>
-  <%= f.label :name %>:
-  <%= f.text_field :name %><br />
+<h1>Edit User</h1>
 
-  <%= f.label "Height (in inches)" %>:
-  <%= f.text_field :height %><br />
+<%= render 'form' %>
 
-  <%= f.label 'How happy are you? (1-5 scale)' %>:
-  <%= f.text_field :happiness %><br />
 
-  <%= f.label 'How nauseous are you? (1-5 scale)' %>:
-  <%= f.text_field :nausea %><br />
-
-  <%= f.label 'How many tickets would you like to purchase for $1 each' %>:
-  <%= f.text_field :tickets %><br />
-
-  <%= f.label 'Check box if you are a theme park owner' %>:
-  <%= f.check_box :admin %><br />
-
-  <%= f.submit "Update User" %>
-<% end %>
-
-<%= link_to "Show", user_path(@user) %> | <%= link_to "Back", :back %>
+<%= link_to "Show", user_path(@user) %> | <%= link_to "Back", users_path %>
