--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,10 +1,12 @@
 <div class="container">
+<div class="left-pic">
   <img src="http://www.washingtonpost.com/wp-srv/special/health/why-roller-coasters-make-us-scream/images/rollercoasterBackground.jpg" width="550" height="325">
+  </div>
 
   <div class="right-info">
     <h1>Welcome to the Amusement Park!</h1>
     <div class="center">
-      <p><a href="/sign_in">Sign in</a>   |   <a href="/users/new">Sign up</a></p>
+      <p><%= link_to "Sign in", sign_in_path %>   |   <%= link_to "Sign up", new_user_path %></p>
     </div>
   </div>
   
