--- a/app/views/attractions/new.html.erb
+++ b/app/views/attractions/new.html.erb
@@ -1,25 +1,22 @@
 <h1>New attraction</h1>
 
 <%= form_for @attraction do |f| %>
+
   <%= f.label :name %>:
-  <%= f.text_field :name %><br />
+  <%= f.text_field :name %><br><br>
 
-  <%= f.label "Height Requirement (in inches)" %>:
-  <%= f.text_field :min_height %><br />
+  <%= f.label :min_height, "Height Requirement (in inches)" %>:
+  <%= f.text_field :min_height %><br><br>
 
-  <%= f.label 'How happy are you? (1-5 scale)' %>:
-  <%= f.text_field :happiness %><br />
 
-  <%= f.label 'How fun is it? (1-5 scale)' %>:
-  <%= f.text_field :happiness_rating %><br />
+  <%= f.label :happiness_rating, 'How fun is it? (1-5 scale)' %>:
+  <%= f.text_field :happiness_rating %><br><br>
 
-  <%= f.label 'How nausea-inducing is it? (1-5 scale)' %>:
-  <%= f.text_field :nausea_rating %><br />
+  <%= f.label :nausea_rating, 'How nausea-inducing is it? (1-5 scale)' %>:
+  <%= f.text_field :nausea_rating %><br><br>
 
-  <%= f.label 'How many tickets does it cost?' %>:
-  <%= f.text_field :tickets %><br />
+  <%= f.label :tickets, 'How many tickets does it cost?' %>:
+  <%= f.text_field :tickets %><br><br>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= f.submit "Create Attraction" %>
 <% end %>
