--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -1,22 +1,21 @@
-<%= label_tag "Name: " %> <%= @attraction.name %><br>
+<div class="info">
 
-<%= label_tag "Total Number of Users: " %> <%= @attraction.users.count %><br>
+   <p><strong>Name: </strong><%= @attraction.name %></p>
 
-<%= label_tag "Ticket Requirement: " %> <%= @attraction.tickets %><br>
+   <p><strong>Ticket Requirement:</strong> <%= @attraction.tickets %></p>
 
-<%= label_tag "Height Requirement: " %> <%= @attraction.min_height %> inches<br>
+   <p><strong>Height Requirement:</strong> <%= @attraction.min_height %></p>
 
-<%= label_tag "Nausea Rating: " %> <%= @attraction.nausea_rating %><br>
+   <p><strong>Nausea Rating:</strong> <%= @attraction.nausea_rating %></p>
 
-<%= label_tag "Happiness Rating: " %> <%= @attraction.happiness_rating %><br>
+    <p><strong>Happiness Rating:</strong> <%= @attraction.happiness_rating %></p>
+    
+     <p><strong>Total Number of Users:</strong> <%= @attraction.users.count %></p>
 
-<% if current_user.admin? %>
-  <%= link_to "Edit Attraction", edit_attraction_path(@attraction) %><br>
-<% else %>
-  <%= form_tag "/rides/new", method: "post" do %>
-    <%= hidden_field_tag :user_id, current_user.id %>
-    <%= hidden_field_tag :attraction_id, @attraction.id %>
-    <%= submit_tag "Go on this ride" %>
-  <% end %>
-<% end %>
-<%= link_to "Back", :back %>
+     <% if current_user.admin %>
+      <%= link_to "Edit Attraction", edit_attraction_path(@attraction) %>
+    <% else %>   
+     <%= button_to "Go on this ride", '/rides', :method => "post", params: { attraction_id: :"#{@attraction.id}" } %>
+   <% end %>  
+     <br><br>
+</div>
