--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-    <!--  navbar -->
+<!--  navbar -->
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -12,15 +12,16 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-           <% if logged_in? %>
-            <li><%= link_to "Hello, #{current_user.name}!", user_path(current_user) %></li>
-            <li><%= link_to "Attractions", attractions_path %></li>
-            <li><%= link_to "Log Out", logout_path %></li>
-            <% else %>
-            <li><%= link_to "Sign Up", new_user_path %></li>
-            <li><%= link_to "Sign In", sign_in_path %></li>
-            <% end %>
+          <% if current_user %>
+            <li><%= link_to "See attractions", attractions_path %></li>
+            <li><%= link_to "Log Out", signout_path , :method => :delete %></li>
+          <% else %>
+            <li><%= link_to "Sign up", new_user_path %></li>
+            <li><%= link_to "Sign in", signin_path %></li>
+          <% end %>  
+            
+  
           </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+        </div><!--navbar-collapse collapse -->
+      </div><!--container -->
+    </div><!--navbar navbar-inverse navbar-fixed-top -->
