--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,26 +7,16 @@
       <img src="http://s3.amazonaws.com/nvest/Blank_Club_Website_Avatar_Gray.jpg" height="250">
     </div>
 
+
     <div class="info">
-      <% if @user.admin? %>
-        <h3><strong>ADMIN</strong></h3>
+      <% if @user.admin %>
+        <p><strong>ADMIN</strong></p>
       <% end %>
-
-      <%= label_tag "Name: " %>
-      <%= @user.name %><br>
-
-      <%= label_tag "Tickets: " %>
-      <%= @user.tickets %><br>
-
-      <%= label_tag "Mood: " %>
-      <%= @user.mood %><br>
-
-      <%= label_tag "Height: " %>
-      <%= @user.height %><br>
-
-      <%= link_to "Edit", edit_user_path(@user) %><br>
-
-      <%= link_to "See attractions", attractions_path %>
+      <br>
+       <p><strong>Name: </strong><%= @user.name %></p>
+       <p><strong>Tickets:</strong> <%= @user.tickets %></p>
+       <p><strong>Mood:</strong> <%= @user.mood %></p>
+       <p><strong>Height:</strong> <%= @user.height %></p>
     </div>
   </div>
 </div>
