--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Listing Attractions</h1>
 
 <br>
+<%= link_to "New Attraction", new_attraction_path %>
+
 <% if current_user.admin %>
   <%= link_to "New Attraction", new_attraction_path %>
 <% end %>
@@ -24,5 +26,6 @@
       <td><%= link_to "Go on #{attraction.name}", attraction_path(attraction) %></td>
     <% end %>  
   </tr>
+
 <% end %>  
 </table>
