--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -21,6 +21,6 @@
   <%= f.label 'Check box if you are a theme park owner' %>:
   <%= f.check_box :admin %></br></br>
 
-  <%= f.submit "Create User" %>
+  <%= f.submit %>
   
 <% end %>
