--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,9 @@
 
   <div class="right-info">
     <h1>Welcome to the Amusement Park!</h1>
+
+    <%#= link_to "Sign up", new_user_path %>
+    <%#= link_to "Sign in", signin_path %>
   </div>
   
 </div> <!--close container -->
