--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,19 +4,18 @@
 
   <div class="center">
     <div class="pic">
-      <img src="http://s3.amazonaws.com/nvest/Blank_Club_Website_Avatar_Gray.jpg" height="250">
+      <img src="https://s-media-cache-ak0.pinimg.com/236x/f6/cb/be/f6cbbe90651b6d7251266d9e1435e188.jpg" height="250">
     </div>
 
 
-    <div class="info">
-      <% if @user.admin %>
-        <p><strong>ADMIN</strong></p>
-      <% end %>
-      <br>
-       <p><strong>Name: </strong><%= @user.name %></p>
-       <p><strong>Tickets:</strong> <%= @user.tickets %></p>
-       <p><strong>Mood:</strong> <%= @user.mood %></p>
-       <p><strong>Height:</strong> <%= @user.height %></p>
-    </div>
-  </div>
-</div>
+<h1><%= @user.name %></h1>
+
+<% if @user.admin %>
+  ADMIN
+<% else %>
+  GUEST
+<%end%>
+
+<p>Mood: <%= @user.mood %></p>
+<p>Tickets: <%= @user.tickets %></p>
+<p>Height: <%= @user.height %></p>
