--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -1,3 +1,9 @@
+<div class="center">
+    <div class="pic">
+      <img src="http://www.clker.com/cliparts/C/z/L/5/y/h/circus-hi.png">
+    </div>
+  </div>
+
 <h1><%= @attraction.name %></h1>
 
 <div class="info">
