--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
   </div>
 
 
-<h1>Hello, <%= @user.name.capitalize %></h1>
+<h1>Hello, <%= @user.name %></h1>
 
 <% if @user.admin %>
   <h3>ADMIN</h3>
