--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -7,20 +7,18 @@
 <h1><%= @attraction.name %></h1>
 
 <div class="info">
-    <p><strong>Ticket Requirement:</strong> <%= @attraction.tickets %></p>
-    <p><strong>Height Requirement:</strong> <%= @attraction.min_height %> inches</p>
-    <p><strong>Nausea Rating:</strong> <%= @attraction.nausea_rating %></p>
-    <p><strong>Happiness Rating:</strong> <%= @attraction.happiness_rating %></p>
-    <p><strong>Total Number of Users:</strong> <%= @attraction.users.count %></p>
-    <% if current_user.admin %>
-      <%= link_to 'Edit Attraction', [:edit, @attraction] %></br></br>
-    <% end %>
-      <form action="/rides/new" method="post">
-        <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
-        <%= tag(:input, :type => "hidden", :name => :user_id, :value => current_user.id) %>
-        <%= tag(:input, :type => "hidden", :name => :attraction_id, :value => @attraction.id) %>
-        <input type="submit" value="Go on this ride">
-      </form>
+  <p><strong>Ticket Requirement:</strong> <%= @attraction.tickets %></p>
+  <p><strong>Height Requirement:</strong> <%= @attraction.min_height %> inches</p>
+  <p><strong>Nausea Rating:</strong> <%= @attraction.nausea_rating %></p>
+  <p><strong>Happiness Rating:</strong> <%= @attraction.happiness_rating %></p>
+  <p><strong>Total Number of Users:</strong> <%= @attraction.users.count %></p>
 
-    <%= link_to 'Back', attractions_path %></p>
+    <form action="/rides/new" method="post">
+      <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
+      <%= tag(:input, :type => "hidden", :name => :user_id, :value => current_user.id) %>
+      <%= tag(:input, :type => "hidden", :name => :attraction_id, :value => @attraction.id) %>
+      <input type="submit" value="Go on this ride">
+    </form>
+
+  <p><%= link_to "Edit Attraction", edit_attraction_path(@attraction)%></p>
 </div>
