--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,7 +14,7 @@
           <ul class="nav navbar-nav">
           <% if current_user %>
             <li><%= link_to "See attractions", attractions_path %></li>
-            <li><%= link_to "Log Out", logout_path , :method => :delete %></li>
+            <li><%= link_to "Log Out", logout_path, method: :delete %></li>
           <% else %>
             <li><%= link_to "Sign up", new_user_path %></li>
             <li><%= link_to "Sign in", signin_path %></li>
